--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,40 +1,100 @@
 /* footer */
-footer {
+.footer-frontend-mentor {
 	align-items: center;
-	border-top: 0.063rem solid var(--light-grey);
-	color: var(--light-grey);
+	border-top: 0.063rem solid white;
+	color: var(--medium-grey);
 	display: flex;
 	flex-direction: column;
-	gap: 0.5rem;
+	gap: 1rem;
 	justify-content: center;
+
 	padding: 1rem;
 
-	*:focus {
-		outline: none;
-	}
-
-	a {
-		color: var(--orange);
-	}
-
-	p {
+	:is(a, p) {
 		font-size: 0.875rem;
+	}
+
+	a,
+	a:is(:visited, :active) {
+		color: var(--white);
+		text-decoration: none;
+	}
+
+	a:is(:focus, :hover) {
+		color: var(--orange);
 	}
 
 	@media (min-width: 48em) {
 		flex-direction: row;
-		gap: 0;
-		p {
-			font-size: 0.9375rem;
+		gap: 0.5rem;
+		justify-content: center;
+
+		:is(a, p) {
+			font-size: 0.938rem;
 		}
 	}
 }
 
 .challenge-by {
+	align-items: center;
+	display: flex;
+	flex-direction: row;
+	gap: 0.5rem;
+	line-height: 1;
+
+	svg {
+		aspect-ratio: 7 /1;
+		fill: currentColor;
+		height: 1.2rem;
+		margin-top: 0.45rem;
+	}
+
 	@media (min-width: 48em) {
 		&::after {
-			content: "\00a0\•\00a0\00a0";
-			color: var(--white);
+			content: "\2022";
+		}
+
+		svg {
+			height: 1.25rem;
+		}
+	}
+}
+
+.coded-by {
+	align-items: center;
+	display: flex;
+	gap: 0.5rem;
+	justify-content: center;
+
+	@media (min-width: 48em) {
+		&::after {
+			content: "\2022";
+		}
+	}
+}
+
+.social-media {
+	align-items: center;
+	display: flex;
+	gap: 1rem;
+	justify-content: center;
+	line-height: 1;
+
+	svg {
+		aspect-ratio: 1;
+		fill: white;
+		width: 1.25rem;
+
+		&:is(:focus, :hover) {
+			fill: var(--orange);
+		}
+	}
+
+	@media (min-width: 48em) {
+		gap: 0.5rem;
+
+		svg {
+			width: 1rem;
 		}
 	}
 }
